Establish many-to-many relationship between articles and tags

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,14 +15,22 @@
     <%= f.label :url %><br />
     <%= f.text_field :url %>
   </div>
+
   <div class="field">
     <%= f.label :title %><br />
     <%= f.text_field :title %>
   </div>
+
   <div class="field">
     <%= f.label :body %><br />
     <%= f.text_field :body %>
   </div>
+
+  <div class="field">
+    <%= f.label :tags %><br />
+    <%= f.text_field :tags %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
