--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,6 +5,7 @@
     <th>Url</th>
     <th>Title</th>
     <th>Body</th>
+    <th>Tags</th>
     <th></th>
     <th></th>
     <th></th>
@@ -15,6 +16,11 @@
     <td><%= article.url %></td>
     <td><%= article.title %></td>
     <td><%= article.body %></td>
+    <td>
+      <% article.tags.each do |t| %>
+        <%= t.name + ' ' %>
+      <% end %>
+    </td>
     <td><%= link_to 'Show', article %></td>
     <td><%= link_to 'Edit', edit_article_path(article) %></td>
     <td><%= link_to 'Destroy', article, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
