--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,5 +16,13 @@
 </p>
 
 
+<p>
+  <b>Tags:</b>
+  <% @article.tags.each do |t| %>
+    <%= t.name + ' ' %>
+  <% end %>
+</p>
+
+
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
