--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :tags %><br />
+    <%= f.label :tags %> (space delimited)<br />
     <%= f.text_field :tags %>
   </div>
 
