--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -40,14 +40,18 @@ click <a id="ajaxtester">here</a>
 <script type="text/javascript">
 
 $(function() {
-    alert("jquery ready");
-
     $('#ajaxtester').on('click', function() {
         $.ajax({
             url: "/articles/ajaxcall.json",
             data: { ok: "yep", maybe: "whatever" },
             dataType: "json",
-            type: "get"
+            type: "get",
+            success: function(data) {
+              alert("response: " + JSON.parse(data))
+            },
+            error: function(jqXHR, textStatus, errorThrown) {
+              alert(errorThrown)
+            }
         });
     });
 });
