--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,3 @@
-<h1>Listing articles</h1>
 
 <%= link_to 'New Article', new_article_path %>
 
@@ -16,14 +15,16 @@
     </div>
 
     <div class='article-body'>
-      <%= article.body %>
+      <%= article.body.html_safe %>
     </div>
 
     <div class='article-tags'>
-      tags:
-      <% article.tags.each do |t| %>
-        <%= t.name + ' ' %>
-      <% end %>
+      <em>
+        <strong>tags:</strong>
+        <% article.tags.each do |t| %>
+          <%= t.name + ' ' %>
+        <% end %>
+      </em>
     </div>
 
     <div class='admin-article'>
