- Create one-to-many relationship between Category and Article classes - Add category_id column to articles - Add category associations to show/list/update views

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -27,6 +27,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :category %>
+    <%= f.text_field :category, :value => @category_name %>
+  </div>
+
+  <div class="field">
     <%= f.label :tags %> (space delimited)<br />
     <%= f.text_field :tags, :value => @article.get_tag_names %>
   </div>
