Add gems FactoryGirl, Faker, Cancan Set up Cucumber/Capybara test engines

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,5 +1,9 @@
 
-= link_to 'New Article', new_article_path
+-if can? :create, @article
+  = link_to('New Article', 
+            new_article_path,
+            :class => "new-article")
+
 
 %br
 %br
