--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,10 +9,9 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require foundation
- *= require_tree .
  *= require select2
-
+ *= require twitter/bootstrap
+ *= require_tree .
  */
 
 $title_color: #3b3b3b;
