Add cancan ability to User

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -4,15 +4,15 @@
   %tr
     %th Username
     %th Email
-    %th 
-    %th 
-    %th 
+    %th
+    %th
+    %th
   - @users.each do |user|
     %tr
       %td
         %a= link_to user.username, user
       %td= user.email
-      - if can? :edit, @user
+      - if can? :edit, user
         %td= link_to 'Show', user
         %td= link_to 'Edit', edit_user_path(user)
         %td= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }
