--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,39 +1,31 @@
 %p{:id => "notice"}
   = notice
 
-%p
-  %b Username:
-  %span.username= @user.username
-
-
-%p
-  %b Email:
-  %span.email= @user.email
-
-
-%p
-  %b Is email validated:
-  %span.email-is-validated= @user.is_email_validated
-
-
-%p
-  %b First name:
-  %span.first-name= @user.first_name
-
-
-%p
-  %b Last name:
-  %span.last-name= @user.last_name
-
-
-%p
-  %b Is enabled:
-  %span.is-enabled= @user.is_enabled
-
-
-%p
-  %b Is deleted:
-  %span.is-deleted= @user.is_deleted
+.user
+  %p
+    %b Username:
+    %span.username= @user.username
+  %p
+    %b Email:
+    %span.email= @user.email
+  %p
+    %b Is email validated:
+    %span.email-is-validated= @user.is_email_validated
+  %p
+    %b First name:
+    %span.first-name= @user.first_name
+  %p
+    %b Last name:
+    %span.last-name= @user.last_name
+  %p
+    %b Roles:
+    %span.is-is-admin= show_role(@user)
+  %p
+    %b Is enabled:
+    %span.is-enabled= @user.is_enabled
+  %p
+    %b Is deleted:
+    %span.is-deleted= @user.is_deleted
 
 
 
