--- a/app/views/users/index.haml
+++ b/app/views/users/index.haml
@@ -1,18 +1,20 @@
 %h1 Listing users
 
-%table.all_users
+%table.all-users
   %tr
     %th Username
     %th Email
+    %th Roles
     %th
     %th
     %th
   - @users.each do |user|
-    %tr
+    %tr.user
       %td
         %a= link_to user.username, user
       %td= user.email
-      - if can? :edit, user
+      %td= show_role(user)
+      - if can? :manage, user
         %td= link_to 'Show', user
         %td= link_to 'Edit', edit_user_path(user)
         %td= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }
