--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,11 +8,15 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
  *= require select2
  *= require twitter/bootstrap
  *= require_tree .
+ *= require_self
  */
+
+body {
+  margin: 0 5% 5% 5%
+}
 
 $title_color: #3b3b3b;
 
