Add article search page [Finishes #48963585]

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
     <span class='register'><%= link_to 'register', '/users/sign_up' %></span>
   <% end %>
 </div>
+<div id="search_link">
+  <%= link_to "Search Articles", searches_path %>
+</div>
 
 <%= yield %>
 
