--- a/app/views/searches/index.haml
+++ b/app/views/searches/index.haml
@@ -1,7 +1,7 @@
 
 .search-container
   %input.search-box#search_box{ placeholder: "Search for articles" }
-  %button.search-button.btn-primary Search
+  %button#search_button.btn-primary{ data: { behavior: "searchInitializer" } } Search
 
 %br
 
