--- a/app/views/articles/show.haml
+++ b/app/views/articles/show.haml
@@ -12,4 +12,10 @@
   - @article.tags.each do |t|
     = t.name + ' '
 
-#{link_to 'Edit', edit_article_path(@article)} | #{link_to 'Back', articles_path}
+.article-author
+  = @article.author.username
+
+%br
+
+- if can? :manage, @article
+  #{link_to 'Edit', edit_article_path(@article)} | #{link_to 'Back', articles_path}
