--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,11 @@
  */
 
 body {
-  margin: 0 5% 5% 5%
+  margin: 0 5% 5% 5%;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size:24px;
+  line-height:32px;
+  color:#3d3d3d;
 }
 
 $title_color: #3b3b3b;
