--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,9 +11,11 @@
 
   %body
     #main-container
-      .notice= notice
-
       = render partial: "layouts/header"
 
+      - if flash[:notice]
+        .notice= flash[:notice]
+      - if flash[:alert]
+        .alert= flash[:alert]
 
       = yield
