Aritcle index and show page styles are now consistent [Finishes #51765191]

--- a/app/views/articles/show.haml
+++ b/app/views/articles/show.haml
@@ -1,6 +1,10 @@
 .article-title
   #{@article.title}
 
+.article-create-date
+  - unless @article.created_at.blank?
+    = @article.created_at.to_formatted_s(:db)
+
 .article-body
   #{@article.markdown}
 
