--- a/app/views/articles/_form.haml
+++ b/app/views/articles/_form.haml
@@ -1,28 +1,17 @@
-- if @article.errors.any?  #error_explanation
-  %h2= "#{pluralize(@article.errors.count, 'error')} prohibited this article from being saved:"
+.article-form
+  - if @article.errors.any?  #error_explanation
+    %h2= "#{pluralize(@article.errors.count, 'error')} prohibited this article from being saved:"
 
-  %ul
-    = @article.errors.full_messages.each do |msg|
-      %li= msg
+    %ul
+      = @article.errors.full_messages.each do |msg|
+        %li= msg
 
-= simple_form_for(@article) do |f|
-  .field
-    = f.label :title
-    = f.text_field :title
-
-  .field
-    = f.label :body
-    = f.text_area :body
-
-  .field
-    = f.label :category
-    = f.text_field :category, :value => @category_name
-
-  .field
-    = f.label :tags
-    = f.text_field :tags, :value => @article.get_tag_names
-
+  = simple_form_for(@article) do |f|
+    = f.input :title
+    = f.input :body
+    = f.input :category, :value => @category_name
+    = f.input :tags, :value => @article.get_tag_names
     = f.input :published
 
-  .actions
-    = f.button :submit, class: "btn-primary"
+    .actions
+      = f.button :submit, class: "btn-primary"
