--- a/app/views/articles/show.haml
+++ b/app/views/articles/show.haml
@@ -6,7 +6,7 @@
     = @article.created_at.to_formatted_s(:db)
 
 .article-body
-  #{@article.markdown}
+  #{markdown_to_html(@article.body)}
 
 .article-category
   - unless @article.category == nil
