--- a/app/views/articles/_form.haml
+++ b/app/views/articles/_form.haml
@@ -1,5 +1,5 @@
 .article-form
-  - if @article.errors.any?  #error_explanation
+  - if @article.errors.any?
     %h2= "#{pluralize(@article.errors.count, 'error')} prohibited this article from being saved:"
 
     %ul
