--- a/app/views/articles/_form.haml
+++ b/app/views/articles/_form.haml
@@ -1,21 +1,16 @@
 .article-form
-  - if @article.errors.any?
-    %h2= "#{pluralize(@article.errors.count, 'error')} prohibited this article from being saved:"
-
-    %ul
-      = @article.errors.full_messages.each do |msg|
-        %li= msg
-
   = simple_form_for(@article) do |f|
     = f.input :title
     = f.input :body
-    .field
+
+    .input
       = f.label :category
       = f.text_field :category, :value => @category_name
 
-    .field
+    .input
       = f.label :tags
       = f.text_field :tags, :value => @article.get_tag_names
+
     = f.input :published
 
     .actions
