--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -12,10 +12,5 @@
   %body
     #main-container
       = render partial: "layouts/header"
-
-      - if flash[:notice]
-        .notice= flash[:notice]
-      - if flash[:alert]
-        .alert= flash[:alert]
-
+      = render_flash_messages
       = yield
